[tool.poetry]
name = "twitch api scraper"
version = "0.1.0"
description = ""
authors = ["Lautaro Nicolas Pacella"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
tqdm = "^4.62.3"
lxml = "^4.6.4"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
